# weather-predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.sh
src/: train.py
src/weather_predictor/api/: weather_service.py
src/weather_predictor/data/: processor.py
src/weather_predictor/frontend/: app.py
src/weather_predictor/models/: weather_model.py
tests/: conftest.py  test_data_processor.py  test_frontend.py  test_weather_model.py  test_weather_service.py
